--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./index.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <div id="root">Not Rendered</div>
+    <div id="root"></div>
     <script type="module" src="./src/App.js"></script>
   </body>
 </html>
