--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Namasta React</title>
+    <title>Food Delivery</title>
     <link href="./index.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
